sunspot time series data from WDC-Silso

--- a/common/bib/english.bib
+++ b/common/bib/english.bib
@@ -493,7 +493,7 @@
   key          = {Bible},
   edition      = {CUVMP Traditional},
   url          = {http://cnbible.com/cuvmpt/},
-  note         = {{\fntzht{現代標點和合本}}},
+  note         = {{\fntzht{???????}}},
   }
 
 @book{unasb,
@@ -850,13 +850,13 @@
   }
 
 @book{chen2002,
-  title        = {\zht{隨時引用智慧英諺900} (900 English proverbs at your fingertips)},
-  shorttitle   = {\zht{隨時引用智慧英諺900}},
+  title        = {\zht{????????900} (900 English proverbs at your fingertips)},
+  shorttitle   = {\zht{????????900}},
   volume       = {3},
-  author       = {\zht{陳世琪}},
-  note         = {[\zht{陳世琪}: Ch/'en Sh/`i Q/'i]},
+  author       = {\zht{???}},
+  note         = {[\zht{???}: Ch/'en Sh/`i Q/'i]},
   year         = {2002},
-  publisher    = {\zht{正中書局}},
+  publisher    = {\zht{????}},
   isbn10       = {9570914106},
   isbn         = {9789570914108},
   oclc         = {58833908},
@@ -3206,6 +3206,19 @@
   volume       = {5},
   }
 
+@book{rice2012,
+  isbn         = {9781620294345},
+  isbn10       = {1620294346},
+  title        = {Helen Steiner Rice: A Collection of Faith, Hope, and Love},
+  series       = {Inspirational Book Bargains},
+  author       = {Helen Steiner Rice},
+  publisher    = {Barbour Publishing},
+  year         = {2012},
+  pages        = {256},
+  url          = {http://books.google.com/books?vid=ISBN9781620294345},
+  urla         = {http://www.amazon.com/dp/9781620294345},
+  }
+
 @article{parker2013mar20,
   title        = {Rescued from the Streets, Advocate Now on a Mission},
   author       = {Julie Parker},
@@ -3331,7 +3344,7 @@
 
 @book{rohsenow2003,
   author       = {John Snowden Rohsenow},
-  title        = {ABC Dictionary of Chinese Proverbs; \zht{漢英諺語詞典}},
+  title        = {ABC Dictionary of Chinese Proverbs; \zht{??????}},
   shorttitle   = {ABC Dictionary of Chinese Proverbs},
   series       = {ABC Chinese dictionary series},
   editor       = {Victor H. Mair},
@@ -3889,9 +3902,9 @@
   }
 
 @book{xu121,
-  title        = {\zht{說文解字注} (Sh/-uo W/'en Ji/>e Z/`i Zh/`u, Explanatory Notes of Chinese Characters)},
-  author       = {\zht{許慎}},
-  note         = {[\zht{許慎}: X/>u Sh/`en]},
+  title        = {\zht{?????} (Sh/-uo W/'en Ji/>e Z/`i Zh/`u, Explanatory Notes of Chinese Characters)},
+  author       = {\zht{??}},
+  note         = {[\zht{??}: X/>u Sh/`en]},
   year         = {121},
   url          = {http://www.gg-art.com/imgbook/index.php?bookid=53},
   publisher    = {GuangZhou HuanHui Cultural Development Company Limited},
