--- a/common/bib/probstat.bib
+++ b/common/bib/probstat.bib
@@ -1285,6 +1285,14 @@
   urla         = {http://www.amazon.com/dp/9780470994542},
   }
 
+@article{rdocumentation_sunspotmonth,
+  author       = {rdocumentation.org},
+  year         = {2013},
+  title        = {Monthly Sunspot Data, from 1749 to \"Present\"},
+  journal      = {RDocumentation},
+  url          = {https://www.rdocumentation.org/packages/datasets/versions/3.6.1/topics/sunspot.month},
+  }
+
 @article{rosenblatt1956,
   author       = {Murray Rosenblatt},
   year         = {1956},
@@ -1524,6 +1532,15 @@
   year         = {2002},
   isbn         = {0-471-09390-4},
   url          = {http://ece.gmu.edu/faculty\_info/van.html},
+  }
+
+@article{wdcsilo_sunspot,
+  author       = {{SILSO World Data Center}},
+  address      = {Royal Observatory of Belgium, avenue Circulaire 3, 1180 Brussels, Belgium},
+  title        = {The International Sunspot Number},
+  journal      = {International Sunspot Number Monthly Bulletin and online catalogue},
+  year         = {2019},
+  url          = {http://www.sidc.be/silso/datafiles},
   }
 
 @article{welch1967,
