--- a/common/matched_filter.tex
+++ b/common/matched_filter.tex
@@ -20,7 +20,7 @@ received signal $\rvy(t;\theta)$ with each signal from $\setS$.
 \hie{Orthonormal decomposition} computes the innerproducts of
 $\rvy(t;\theta)$ with each signal from the set $\setY$.
 
-In the case where $\seto{\setS}$ is large, often $\seto{\setY}<<\seto{\setS}$
+In the case where $\seto{\setS}$ is large, often $\seto{\setY}\ll\seto{\setS}$
 making orthonormal decomposition much easier to implement.
 For example, in a QAM-64 modulation system,
 signal matching requires $\seto{\setS}=64$ innerproduct calculations,
