--- a/common/math/graphics/data/earthquake_kapi_20180928.tex
+++ b/common/math/graphics/data/earthquake_kapi_20180928.tex
@@ -1,25 +1,23 @@
 %============================================================================
 % Daniel J. Greenhoe
 % LaTeX file
-% Symmlet-p16 wavlet function and coefficients
 % nominal xunit = 10mm
 % nominal yunit = 10mm
-% nominal font size = \scriptsize
 %============================================================================
 \psset{xunit=0.0004\psxunit}%
 \psset{yunit=2.5\psyunit}%
-\begin{pspicture}(-100,-1.1)(25000,1.1)%
-  %-------------------------------------
-  % parameters
-  %-------------------------------------
-  \psset{linewidth=0.75pt}%
+\begin{pspicture}(-150,-1.1)(25000,1.1)%
   %-------------------------------------
   % axes
   %-------------------------------------
-  \psaxes[linecolor=axis,linewidth=0.75pt,yAxis=false,ticks=none,labelsep=2pt,labels=none]{->}(0,0)(-100,-1.1)(25000,1.1)%
-  \psaxes[linecolor=axis,linewidth=0.75pt,xAxis=false,ticks=none,labelsep=2pt]{<->}(0,0)(-10,-1.1)(25000,1.1)%
+  {%
+  \psset{ticks=x, labels=none, Dx=1000, linecolor=axis,linewidth=0.75pt,showorigin=false}%
+  \psaxes[yAxis=false]{ ->}(0,0)(0,-1.1)(25000,1.1)% x-axis
+  \psaxes[xAxis=false]{<->}(0,0)(0,-1.1)(25000,1.1)% y-axis
+  }%
   %-------------------------------------
   % plot
   %-------------------------------------
+  \psset{linewidth=0.75pt}%
   \fileplot{../../common/math/graphics/data/earthquake_kapi_20180928_ds5.dat}%
 \end{pspicture}%
