--- a/common/bib/probstat.bib
+++ b/common/bib/probstat.bib
@@ -1176,6 +1176,14 @@
   urlg         = {http://books.google.com/books?vid=ISBN9812708014},
   }
 
+@article{callery2019,
+  url          = {https://climate.nasa.gov/vital-signs/global-temperature/},
+  author       = {NASA},
+  year         = {2019},
+  editor       = {Susan Callery},
+  title        = {Global Temperature},
+  journal      = {NASA Global Climate Change: Vital Signs of the Planet},
+  }
 
 @book{nelles2001,
   isbn10       = {3540673695},
@@ -1510,6 +1518,15 @@
   publisher    = {Academic Press},
   year         = {1965},
   pages        = {228+xii},
+  }
+
+@article{uea_hadcrut4,
+  author       = {UEA},
+  year         = {2019},
+  title        = {HadCRUT4 global temperature dataset},
+  journal      = {Climate Research Unit Data},
+  institution  = {University of East Anglia},
+  url          = {http://www.cru.uea.ac.uk/data},
   }
 
 @book{vantrees1,
