best LS-fit 3rd order polynomial to global temperature data

--- a/common/bib/probstat.bib
+++ b/common/bib/probstat.bib
@@ -1301,6 +1301,20 @@
   url          = {https://www.rdocumentation.org/packages/datasets/versions/3.6.1/topics/sunspot.month},
   }
 
+@article{robinson1982,
+  title        = {A Historical Perspective of Spectrum Estimation},
+  publisher    = {IEEE},
+  author       = {Enders A. Robinson},
+  journal      = {Proceedings of the IEEE},
+  volume       = {70},
+  number       = {9},
+  year         = {1982},
+  month        = {September},
+  pages        = {885--907},
+  doi          = {10.1109/PROC.1982.12423},
+  url          = {https://mast.queensu.ca/~driegert/papers/History_of_Spectrum_Estimation.pdf},
+  }
+
 @article{rosenblatt1956,
   author       = {Murray Rosenblatt},
   year         = {1956},
