--- a/common/norm_minimization.tex
+++ b/common/norm_minimization.tex
@@ -497,7 +497,89 @@ for the polynomial are
   }
 \label{ex:global-temp}
 %---------------------------------------
-See \prefpp{fig:global-temp}.
+Find the best fit 3rd order polynomial 
+$\fp(x) = dx^3 + cx^2 + bx + a$
+for the climate measurements illustrated in \prefpp{fig:global-temp}.
+{\footnotesize\begin{align*}
+  \estn 
+    &= \brs{\begin{array}{c}
+         a\\b\\c\\d
+       \end{array}}
+     = \brp{\opU\opU^H}^{-1}\brp{\opU\vy}
+     = \brp{\brs{\begin{array}{rrrr}
+                  1 & 0      & 0^2    & 0^3    
+         \\       1 & 1      & 1^2    & 1^3    
+         \\   \vdots& \vdots & \vdots & \vdots 
+         \\       1 & 138    & 138^2  & 138^3  
+       \end{array}}^H
+       \brs{\begin{array}{rrrr}
+                  1 & 0      & 0^2    & 0^3    
+         \\       1 & 1      & 1^2    & 1^3    
+         \\   \vdots& \vdots & \vdots & \vdots 
+         \\       1 & 138    & 138^2  & 138^3  
+       \end{array}}}^{-1}
+       \brp{
+       \brs{\begin{array}{rrrr}
+                  1 & 0      & 0^2    & 0^3    
+         \\       1 & 1      & 1^2    & 1^3    
+         \\   \vdots& \vdots & \vdots & \vdots 
+         \\       1 & 138    & 138^2  & 138^3  
+       \end{array}}^H
+       \brs{\begin{array}{l}
+            y_0      
+         \\ y_1      
+         \\ \vdots 
+         \\ y_{138}
+       \end{array}}
+       }
+  \\&= \brs{\begin{array}{rrrr}
+                139 &        9591 &        885569 &        91987281
+         \\    9591 &      885569 &      91987281 &     10192013621
+         \\  885569 &    91987281 &   10192013621 &   1176302687001
+         \\91987281 & 10192013621 & 1176302687001 & 139640293329509
+       \end{array}}^{-1}
+       \brp{
+       \brs{\begin{array}{rrrr}
+                  1 & 0      & 0^2    & 0^3    
+         \\       1 & 1      & 1^2    & 1^3    
+         \\   \vdots& \vdots & \vdots & \vdots 
+         \\       1 & 138    & 138^2  & 138^3  
+       \end{array}}^H
+       \brs{\begin{array}{l}
+            y_0      
+         \\ y_1      
+         \\ \vdots 
+         \\ y_{138}
+       \end{array}}
+       }
+  \\&=
+    \brs{\begin{array}{r}
+      -0.24606376973\\
+      -0.00076398238\\
+       0.00001657135\\
+       0.00000034336
+    \end{array}}
+\end{align*}}
+\begin{lstlisting}[language=matlab]
+Y = [ 
+ -0.17
+ -0.08
+ -0.11
+  ...
+  0.93
+  0.85
+];
+
+X = [0:2018-1880]';   % years-1880
+U = [ones(1,N) ; X', ; X'.^2, ; X'.^3];
+coefs = inv(U*U')*(U*Y)
+a=coefs(1)
+b=coefs(2)
+c=coefs(3)
+d=coefs(4)
+bestFit = d*X.^3 + c*X.^2 + b*X + a;
+plot(bestFit)
+\end{lstlisting}
 \end{example}
 
 %======================================
