--- a/common/norm_minimization.tex
+++ b/common/norm_minimization.tex
@@ -532,11 +532,11 @@ for the climate measurements illustrated in \prefpp{fig:global-temp}.
          \\ y_{138}
        \end{array}}
        }
-  \\&= \brs{\begin{array}{rrrr}
-                139 &        9591 &        885569 &        91987281
-         \\    9591 &      885569 &      91987281 &     10192013621
-         \\  885569 &    91987281 &   10192013621 &   1176302687001
-         \\91987281 & 10192013621 & 1176302687001 & 139640293329509
+  \\&= 139 \brs{\begin{array}{rrrr}
+                1   &        69 &       6371 &        661779
+         \\    69   &      6371 &     661779 &      73323839
+         \\  6371   &    661779 &   73323839 &    8462609259
+         \\661779   &  73323839 & 8462609259 & 1004606426831
        \end{array}}^{-1}
        \brp{
        \brs{\begin{array}{rrrr}
@@ -560,6 +560,9 @@ for the climate measurements illustrated in \prefpp{fig:global-temp}.
        0.00000034336
     \end{array}}
 \end{align*}}
+Using this polynomial, we could ``predict"/estimate (not necessarily a very good prediction/estimate)
+what the temperature deviation will be
+in 2030 (+1.1710) and was in 1870 (-0.23711).
 \begin{lstlisting}[language=matlab]
 Y = [ 
  -0.17
@@ -569,7 +572,6 @@ Y = [
   0.93
   0.85
 ];
-
 X = [0:2018-1880]';   % years-1880
 U = [ones(1,N) ; X', ; X'.^2, ; X'.^3];
 coefs = inv(U*U')*(U*Y)
@@ -579,6 +581,10 @@ c=coefs(3)
 d=coefs(4)
 bestFit = d*X.^3 + c*X.^2 + b*X + a;
 plot(bestFit)
+x = 2030;
+predict2030 = d*(x-1880)^3 + c*(x-1880)^2 + b*(x-1880) + a
+x = 1870;
+predict1870 = d*(x-1880)^3 + c*(x-1880)^2 + b*(x-1880) + a
 \end{lstlisting}
 \end{example}
 
