data dimensionality reduction references

--- a/common/norm_minimization.tex
+++ b/common/norm_minimization.tex
@@ -532,7 +532,7 @@ for the climate measurements illustrated in \prefpp{fig:global-temp}.
          \\ y_{138}
        \end{array}}
        }
-  \\&= 139 \brs{\begin{array}{rrrr}
+  \\&= \frac{1}{139} \brs{\begin{array}{rrrr}
                 1   &        69 &       6371 &        661779
          \\    69   &      6371 &     661779 &      73323839
          \\  6371   &    661779 &   73323839 &    8462609259
@@ -572,6 +572,7 @@ Y = [
   0.93
   0.85
 ];
+N = length(Y);
 X = [0:2018-1880]';   % years-1880
 U = [ones(1,N) ; X', ; X'.^2, ; X'.^3];
 coefs = inv(U*U')*(U*Y)
