--- a/common/density_estimation.tex
+++ b/common/density_estimation.tex
@@ -115,20 +115,11 @@ Some techniques of \ope{nonparametric density estimation} include\footnote{
 
 KDE's are conceptually quite simple, but do have some difficulties:
 \begin{listi}
-  \item KDEs are good for 6 dimensions or less---the ``curse of dimensionality"\footnote{
-        \citerp{bellman1954}{206},
-        \citerpc{bellman1961}{94}{\textsection ``5.16 The Curse of Dimensionality"},
-        \citerp{bellman1971}{44},
-        \citerpgc{gramacki2017}{3, 59}{9783319716886}{\textsection3.9 ``The Curse of Dimensionality"}
-        }
+  \item KDEs are good for 6 dimensions or less---the ``curse of dimensionality" \xref{chp:dimreduct}.
   \item KDEs have a \vale{bandwidth} parameter and the computation of this parameter can be quite demanding.\footnote{
         \citerpgc{gramacki2017}{4, 63--83}{9783319716886}{Chapter 4 ``Bandwidth Selectors for Kernel Density Estimation"}
         }
 \end{listi}
 
 For cases where the dimension is 6 or greater, one option is to perform 
-\ope{data dimensionality reduction}.\footnote{
-          \citerc{lee2007}{9780387393513},
-          \citeP{sorzano2014},
-          \citeP{cunningham2015}
-        }
+\ope{data dimensionality reduction} \xref{chp:dimreduct}.
