egg production and cagefree poultry data

--- a/common/bib/analysis.bib
+++ b/common/bib/analysis.bib
@@ -1790,6 +1790,19 @@
   urla         = {http://www.amazon.com/dp/1402051247},
   }
 
+@article{eckart1936,
+  author       = {C. Eckart and G. Young},
+  journal      = {Psychometrika},
+  year         = {1936},
+  volume       = {1},
+  number       = {3},
+  pages        = {211--218},
+  url          = {http://www.math.zju.edu.cn:8080/wjd/TN/T3.pdf},
+  doi          = {https://doi.org/10.1007/BF02288367},
+  publisher    = {Springer-Verlag},
+  issn         = {0033-3123},
+  }
+
 @article{edelman1985,
   author       = {Paul H. Edelman and Robert E. Jamison},
   title        = {The theory of convex geometries},
@@ -3408,6 +3421,20 @@
   urla         = {http://www.amazon.com/dp/3540006621},
   }
 
+@book{jolliffe2013,
+  isbn         = {9781475719048},
+  isbn10       = {1475719043},
+  author       = {I. T. Jolliffe},
+  title        = {Principal Component Analysis},
+  series       = {Springer Series in Statistics},
+  publisher    = {Springer Science \& Business Media},
+  year         = {2013},
+  pages        = {271},
+  url          = {http://books.google.com/books?vid=ISBN9781475719048},
+  urlw         = {http://www.worldcat.org/isbn/9781475719048},
+  urla         = {http://www.amazon.com/dp/9781475719048},
+  }
+
 @article{juza1956,
   author       = {M. J{/*u}za},
   title        = {A note on complete metric spaces},
@@ -4855,6 +4882,16 @@
   url          = {http://books.google.com/books?vid=isbn0817641262},
   urlw         = {http://www.worldcat.org/isbn/0817641262},
   urla         = {http://www.amazon.com/dp/0817641262},
+  }
+
+@article{pearson1901,
+  author       = {Karl Pearson},
+  title        = {On lines and planes of closest fit to systems of points in space},
+  journal      = {Philosophical Magazine},
+  volume       = {2}, 
+  pages        = {559--572},
+  year         = {1901},
+  url          = {https://doi.org/10.1080/14786440109462720},
   }
 
 @book{pecaric1992,
