--- a/common/bib/probstat.bib
+++ b/common/bib/probstat.bib
@@ -267,6 +267,19 @@
   pages        = {23--36},
   }
 
+@book{bishop2006,
+  isbn         = {9780387310732},
+  isbn10       = {0387310738},
+  author       = {Christopher M. Bishop},
+  title        = {Pattern Recognition and Machine Learning},
+  series       = {Information Science and Statistics},
+  publisher    = {Springer},
+  address      = {New York},
+  year         = {2006},
+  edition      = {1},
+  url          = {http://users.isr.ist.utl.pt/~wurmd/Livros/school/Bishop%20-%20Pattern%20Recognition%20And%20Machine%20Learning%20-%20Springer%20%202006.pdf},
+  }
+
 @article{blackman1958mar,
   author       = {R. B. Blackman and J. W. Tukey},
   title        = {The Measurement of Power Spectra from the Point of View of Communications Engineering---Part II},
@@ -1111,6 +1124,15 @@
   year         = {2018},
   month        = {accessed 2018 November 26},
   publisher    = {The MathWorks, Inc.},
+  }
+
+@techreport{mendez2019,
+  title        = {US Egg Production Data Set},
+  number       = {E008R01},
+  author       = {Samara Mendez},
+  institution  = {The Human League Labs},
+  doi          = {10.17605/OSF.IO/Z2GXN},
+  url          = {https://osf.io/z2gxn/},
   }
 
 @inproceedings{mitchell1980,
