--- a/common/dimensionality_reduction.tex
+++ b/common/dimensionality_reduction.tex
@@ -16,12 +16,22 @@ Richard Bellman described this problem as the
   \citerp{bellman1954}{206},
   \citerpc{bellman1961}{94}{\textsection ``5.16 The Curse of Dimensionality"},
   \citerp{bellman1971}{44},
+  \citerppgc{bishop2006}{33}{38}{9780387310732}{\textsection1.4 ``The Curse of Dimensionality"},
   \citerpgc{gramacki2017}{3, 59}{9783319716886}{\textsection3.9 ``The Curse of Dimensionality"}
   }
 
 Here are some references about \ope{dimensionality reduction}:
-\\\indentx\begin{tabular}{cll}
-    \citeP{cunningham2015} & (a 2015 paper): & ``\emph{Linear Dimensionality Reduction: Survey, Insights, and Generalizations}"
-  \\\citeP{sorzano2014}    & (a 2014 paper): & ``\emph{A survey of dimensionality reduction techniques}"
-  \\\citer{lee2007}        & (a 2007 book):  & ``\emph{Nonlinear Dimensionality Reduction}" 
+\\\begin{tabular}{ll}
+    \citeP{cunningham2015}: & ``\emph{Linear Dimensionality Reduction: Survey, Insights, and Generalizations}"
+  \\\citeP{sorzano2014}:    & ``\emph{A survey of dimensionality reduction techniques}"
+  \\\citer{lee2007}:        & ``\emph{Nonlinear Dimensionality Reduction}" 
 \end{tabular}
+
+Algorithms for the operation include the following:
+\begin{listi}
+  \item \ope{Principal Component Analysis} (\ope{PCA})\footnote{
+          \citeP{pearson1901}, 
+          \citeP{eckart1936},
+          \citerc{jolliffe2013}{9781475719048},
+          }
+\end{listi}
