--- a/common/projection_statistics.tex
+++ b/common/projection_statistics.tex
@@ -19,14 +19,22 @@ with respect to the following cases:
    \item the \fncte{MAP estimate} of the sequence
    \item the \fncte{ML estimate}  of the sequence.
 \end{enume}
-That is, even with a drastic reduction in the number of statistics
+Thus even with a drastic reduction in the number of statistics
 from uncountably infinite to finite $\xN$,
-no quality is lost with respect to the estimators listed above.
+no quality is lost with respect to the estimators listed above---that
+is, these statistics are \prope{sufficient}, or are ``\prope{sufficient statistics}".
 This amazing result is very useful in practical system implementation
 and also for proving other theoretical results
 (notably estimation and detection theorems).
 
-But first, some definitions (next) that are used repeatedly in this chapter.
+The concept of sufficient statistics in ``estimation theory" is very similar 
+to the concept of \ope{feature extraction}\footnote{
+  \citerpc{bishop2006}{2}{9780387310732}{{\scshape``1. Introduction"}}
+  }
+in ``machine learning".
+Thus, estimation theory \emph{is} a form of machine learning.
+%But first, some definitions (next) that are used repeatedly in this chapter.
+
 %---------------------------------------
 \begin{definition}
 \label{def:sstat}
